<resources>
    <string name="app_name">Comanda</string>
    <string name="title_activity_tables">Mesas</string>
    <string name="action_home">Inicio</string>
    <string name="loading">Cargando datos...</string>
    <string name="nodate">No hay algo que mostrar.</string>
    <string name="nodata">No hay algo que mostrar.</string>
    <string name="noextras">Ningun ingrediente extra</string>
    <string name="action_settings">Settings</string>
    <string name="action_send_all">Enviar todas las comandas</string>
    <string name="action_add_person">Agregar una persona</string>
    <string name="action_close_service">Cerrar servicio</string>
    <string name="action_serve_dish">Servir platillos</string>
    <string name="title_activity_service">Servicios</string>
    <string name="dish_notes">Notas</string>
    <string name="dish_size">Tamaño</string>
    <string name="dish_time">Tiempo</string>
    <string name="action_dish_add_extra">Agregar extra</string>
    <string name="dish_button_add_dish">Agregar</string>
    <string name="button_login">Ingresar</string>
    <string name="dialog_add_ingredient">Agregar ingrediente</string>
    <string name="dialog_extra_ingredient_select">Extras</string>
    <string name="ok">Aceptar</string>
    <string name="quantity">Cantidad</string>
    <string name="cancel">Cancelar</string>
    <string name="hello_blank_fragment"></string>
    <string name="diners_fragment">Diners fragment</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_dish">Platillos</string>
    <string name="title_activity_comand_history">Historial de comandas</string>
    <string name="hello_world">Hello world!</string>
    <string name="initial_act_text">Comandera, presione el boton ingresar para empezar.</string>
    <string name="action_show_oldies">Mostrar comandas antiguas</string>
    <string name="action_dispatch_command">Despachar comanda</string>
    <string name="action_show_cocina">Mostrar cocina</string>
    <string name="action_show_barra">Mostrar barra</string>
    <string name="action_show_horno">Mostrar pizzeria</string>
    <string name="title_activity_makers">Lugares</string>
    <string name="title_activity_makers_detail">Detalles</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="porcentaje_cobro">Porcentaje de cobro</string>
    <string name="payment_do_payment">Realizar pago</string>
    <string name="action_reassign_table">Reasignar mesa</string>
    <string name="dialog_set_table">Seleccionar mesa</string>
    <string name="chkprio">Alta prioridad</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Arrays -->
    <string-array name="payment_method_array">
        <item>Tarjeta bancaria</item>
        <item>Cheque</item>
        <item>Efectivo</item>
        <item>Transferencia electronica</item>

    </string-array>
    <string name="title_activity_sub_menu">SubMenuActivity</string>
    <string name="title_activity_initial">Comandera</string>
    <string name="title_activity_tables_reasign">Reasignar Mesa</string>
    <string name="title_activity_makers_activity_old">MakersActivityOld</string>
    <string name="title_activity_material_mesas">MaterialMesasActivity</string>
    <string name="title_activity_server_dishes">ServerDishesActivity</string>
</resources>
