<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <TextView android:text="@string/dish_notes" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dish_text_notes" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/dish_edit_notes"
        android:layout_alignBottom="@+id/dish_text_notes"
        android:layout_toRightOf="@+id/dish_text_notes"
        android:layout_toEndOf="@+id/dish_text_notes" />

    <TextView android:text="@string/dish_size" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dish_text_size" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dish_spin_size" />

    <TextView android:text="@string/dish_time" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dish_text_time" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dish_spin_time" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dish_button_add_dish"
        android:id="@+id/dish_buton_add_dish"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:onClick="addDish"/>

</LinearLayout>
